// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HeaderNav snapshots > Default matches snapshot 1`] = `
<nav
  class="flex gap-3 items-center"
>
  <a
    class="inline-flex whitespace-nowrap rounded text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-zinc-950 focus-visible:ring-offset-2 dark:focus-visible:ring-zinc-300 disabled:pointer-events-none disabled:opacity-50 text-zinc-900 dark:text-zinc-50 items-start justify-start underline-offset-4 hover:underline"
    href="/"
  >
    Home
  </a>
  <a
    class="inline-flex whitespace-nowrap rounded text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-zinc-950 focus-visible:ring-offset-2 dark:focus-visible:ring-zinc-300 disabled:pointer-events-none disabled:opacity-50 text-zinc-900 dark:text-zinc-50 items-start justify-start underline-offset-4 hover:underline"
    href="/about"
  >
    About
  </a>
  <a
    class="inline-flex whitespace-nowrap rounded text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-zinc-950 focus-visible:ring-offset-2 dark:focus-visible:ring-zinc-300 disabled:pointer-events-none disabled:opacity-50 text-zinc-900 dark:text-zinc-50 items-start justify-start underline-offset-4 hover:underline"
    href="/contact"
  >
    Contact
  </a>
</nav>
`;

exports[`HeaderNav snapshots > Empty matches snapshot 1`] = `
<nav
  class="flex gap-3 items-center"
/>
`;

exports[`HeaderNav snapshots > ManyItems matches snapshot 1`] = `
<nav
  class="flex gap-3 items-center"
>
  <a
    class="inline-flex whitespace-nowrap rounded text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-zinc-950 focus-visible:ring-offset-2 dark:focus-visible:ring-zinc-300 disabled:pointer-events-none disabled:opacity-50 text-zinc-900 dark:text-zinc-50 items-start justify-start underline-offset-4 hover:underline"
    href="/"
  >
    Home
  </a>
  <a
    class="inline-flex whitespace-nowrap rounded text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-zinc-950 focus-visible:ring-offset-2 dark:focus-visible:ring-zinc-300 disabled:pointer-events-none disabled:opacity-50 text-zinc-900 dark:text-zinc-50 items-start justify-start underline-offset-4 hover:underline"
    href="/about"
  >
    About
  </a>
  <a
    class="inline-flex whitespace-nowrap rounded text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-zinc-950 focus-visible:ring-offset-2 dark:focus-visible:ring-zinc-300 disabled:pointer-events-none disabled:opacity-50 text-zinc-900 dark:text-zinc-50 items-start justify-start underline-offset-4 hover:underline"
    href="/services"
  >
    Services
  </a>
  <a
    class="inline-flex whitespace-nowrap rounded text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-zinc-950 focus-visible:ring-offset-2 dark:focus-visible:ring-zinc-300 disabled:pointer-events-none disabled:opacity-50 text-zinc-900 dark:text-zinc-50 items-start justify-start underline-offset-4 hover:underline"
    href="/blog"
  >
    Blog
  </a>
  <a
    class="inline-flex whitespace-nowrap rounded text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-zinc-950 focus-visible:ring-offset-2 dark:focus-visible:ring-zinc-300 disabled:pointer-events-none disabled:opacity-50 text-zinc-900 dark:text-zinc-50 items-start justify-start underline-offset-4 hover:underline"
    href="/contact"
  >
    Contact
  </a>
</nav>
`;

exports[`HeaderNav snapshots > NoNavItems matches snapshot 1`] = `
<nav
  class="flex gap-3 items-center"
/>
`;

exports[`HeaderNav snapshots > SingleItem matches snapshot 1`] = `
<nav
  class="flex gap-3 items-center"
>
  <a
    class="inline-flex whitespace-nowrap rounded text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-zinc-950 focus-visible:ring-offset-2 dark:focus-visible:ring-zinc-300 disabled:pointer-events-none disabled:opacity-50 text-zinc-900 dark:text-zinc-50 items-start justify-start underline-offset-4 hover:underline"
    href="/"
  >
    Home
  </a>
</nav>
`;
